--- a/.github/workflows/delete-old-workflows.yml
+++ b/.github/workflows/delete-old-workflows.yml
@@ -14,6 +14,6 @@ jobs:
         uses: Mattraks/delete-workflow-runs@v2
         with:
           token: ${{ github.token }}
-          repository: DustinWin/clash-geoip
+          repository: dl123100/clash-geoip
           retain_days: 7
           keep_minimum_runs: 1
