--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,30 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: dev-drprasad/delete-tag-and-release@v1.0
+        with:
+          tag_name: latest
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          delete_release: true
+          repo: dl123100/clash-geoip
 
+      - name: Download IPs
+        env:
+          SED1: sed '/^\s*#/d' | sed '/^::/d'
+          SED2: sed '/^\s*#/d' | sed '/^DOMAIN/d' | sed 's/^[^,]*,\([^,]*\),.*$/\1/' | sed '/^::/d'
+        run: |
+          echo "update_version=$(date +%Y-%m-%d)" >> ${GITHUB_ENV}
+          mkdir -p ./IPs
+          rm -rf ./IPs/*
+          curl -sSL https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list | ${{ env.SED2 }} > ./IPs/Lan_IP.txt
+
+      - name: Commit and push
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add . && git commit -m "更新于 ${update_version}" || exit 0
+          git push
+          
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
