--- a/config.json
+++ b/config.json
@@ -36,6 +36,30 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "google",
+        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/google.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "apple",
+        "uri": "https://raw.githubusercontent.com/Rafeal-Ma/My-IP/main/Apple"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "microsoft",
+        "uri": "https://github.com/aalex954/MSFT-IP-Tracker/releases/latest/download/msft_asn_ip_ranges.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://core.telegram.org/resources/cidr.txt"
       }
@@ -55,7 +79,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "overwriteList": ["cn", "lanip", "telegram", "google"]
+        "overwriteList": ["cn", "lanip", "telegram", "google", "apple", "microsoft"]
       }
     },
     {
