--- a/config.json
+++ b/config.json
@@ -60,6 +60,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "github",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/Github_IP.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://core.telegram.org/resources/cidr.txt"
       }
@@ -79,7 +87,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "lanip", "telegram", "google", "apple", "cn_bing"]
+        "wantedList": ["cn", "lanip", "telegram", "google", "apple", "cn_bing", "github"]
       }
     },
     {
