--- a/config.json
+++ b/config.json
@@ -44,6 +44,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "twitter",
+        "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/twitter.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "apple",
         "uri": "https://raw.githubusercontent.com/Rafeal-Ma/My-IP/main/Apple"
       }
@@ -95,7 +103,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "lanip", "telegram", "google", "apple", "cn_bing", "windows", "github"]
+        "wantedList": ["cn", "lanip", "telegram", "google", "apple", "twitter", "cn_bing", "windows", "github"]
       }
     },
     {
