--- a/config.json
+++ b/config.json
@@ -108,6 +108,22 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "cloudflare",
+        "uri": "https://www.cloudflare.com/ips-v4"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "cloudflare",
+        "uri": "https://www.cloudflare.com/ips-v6"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -127,7 +143,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github"]
+        "wantedList": ["cn", "cloudflare", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github"]
       }
     },
     {
