--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Move files to publish directory
         run: |
           mkdir -p publish
-          mv ./output/dat/*.dat ./output/maxmind/*.mmdb *.gz *.zip ./publish/
+          mv ./output/dat/*.dat ./output/maxmind/*.mmdb ./publish/
           cp -fpPR ./output/text ./publish
 
       - name: Git push assets to "release" branch
