--- a/config.json
+++ b/config.json
@@ -19,6 +19,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "wechat",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/wechat.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "lanip",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/Lan_IP.txt"
       }
@@ -142,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "cloudflare", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
+        "wantedList": ["cn", "wechat", "cloudflare", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
       }
     },
     {
