--- a/config.json
+++ b/config.json
@@ -27,6 +27,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "ccc-cn",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/CCC-CN.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "lanip",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/Lan_IP.txt"
       }
@@ -150,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "wechat", "cloudflare", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
+        "wantedList": ["cn", "ccc-cn", "wechat", "cloudflare", "lanip", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
       }
     },
     {
