--- a/config.json
+++ b/config.json
@@ -59,6 +59,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "aws",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/aws.list"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "google",
         "uri": "https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/google.txt"
       }
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
+        "wantedList": ["aws", "cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
       }
     },
     {
