--- a/config.json
+++ b/config.json
@@ -139,6 +139,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "ntp",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/ntp.list"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "cloudflare",
         "uri": "https://www.cloudflare.com/ips-v4"
       }
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["aws", "cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
+        "wantedList": ["aws", "cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai", "ntp"]
       }
     },
     {
@@ -174,7 +182,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["aws", "cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai"]
+        "wantedList": ["aws", "cn", "ccc-cn", "wechat", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "windows", "github", "akamai", "ntp"]
       }
     },
     {
