--- a/config.json
+++ b/config.json
@@ -99,8 +99,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "cn_bing",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/cn_bing.txt"
+        "name": "bing",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/bing.txt"
       }
     },
     {
@@ -166,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["aws", "cn", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
+        "wantedList": ["aws", "cn", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
       }
     },
     {
@@ -174,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["aws", "cn", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "cn_bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
+        "wantedList": ["aws", "cn", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
       }
     },
     {
