--- a/config.json
+++ b/config.json
@@ -19,14 +19,6 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "xiaomi",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/xiaomi.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
         "name": "ccc",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/ccc.txt"
       }
@@ -45,14 +37,6 @@
       "args": {
         "name": "pollute",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/pollute.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
-        "name": "aws",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/aws.txt"
       }
     },
     {
@@ -147,22 +131,6 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "cloudflare",
-        "uri": "https://www.cloudflare.com/ips-v4"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
-        "name": "cloudflare",
-        "uri": "https://www.cloudflare.com/ips-v6"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -174,7 +142,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["aws", "cn", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
       }
     },
     {
@@ -182,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["aws", "cn", "ccc", "cloudflare", "lanip", "xiaomi", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "pollute", "bing", "facebook", "cert", "microsoft", "github", "akamai", "ntp"]
       }
     },
     {
