--- a/config.json
+++ b/config.json
@@ -83,14 +83,6 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "bing",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/bing.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
         "name": "developer",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/developer.txt"
       }
@@ -126,7 +118,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "bing", "facebook", "cert", "microsoft", "developer", "akamai", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "facebook", "cert", "microsoft", "developer", "akamai", "ntp"]
       }
     },
     {
@@ -134,7 +126,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "bing", "facebook", "cert", "microsoft", "developer", "akamai", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "apple", "twitter", "facebook", "cert", "microsoft", "developer", "akamai", "ntp"]
       }
     },
     {
