--- a/config.json
+++ b/config.json
@@ -99,8 +99,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "ntp",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/ntp.txt"
+        "name": "direct",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/direct.txt"
       }
     },
     {
@@ -118,7 +118,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct"]
       }
     },
     {
@@ -126,7 +126,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "ntp"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct"]
       }
     },
     {
