--- a/config.json
+++ b/config.json
@@ -107,6 +107,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "game",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/game.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -118,7 +126,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct", "game"]
       }
     },
     {
@@ -126,7 +134,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct"]
+        "wantedList": ["cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct", "game"]
       }
     },
     {
