--- a/config.json
+++ b/config.json
@@ -139,6 +139,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "xiaomi",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/xiaomi.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "reject",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/reject.txt"
       }
@@ -158,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct", "game", "reject", "fastly"]
+        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
       }
     },
     {
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "microsoft", "developer", "direct", "game", "reject", "fastly"]
+        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
       }
     },
     {
