--- a/config.json
+++ b/config.json
@@ -75,14 +75,6 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "bing",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/bing.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
         "name": "twitter",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/twitter.txt"
       }
@@ -166,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
+        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
       }
     },
     {
@@ -174,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "bing", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
+        "wantedList": ["ai", "akamai", "cn", "ccc", "lanip", "telegram", "google", "googlecn", "apple", "twitter", "facebook", "xiaomi", "microsoft", "developer", "direct", "game", "reject", "fastly"]
       }
     },
     {
