--- a/config.json
+++ b/config.json
@@ -115,6 +115,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "apple",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/apple.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "reject",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/reject.txt"
       }
@@ -125,6 +133,14 @@
       "args": {
         "name": "httpdns",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/httpdns.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "netflix",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/netflix.txt"
       }
     },
     {
@@ -142,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["ai", "akamai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "direct", "reject", "fastly"]
+        "wantedList": ["apple", "ai", "akamai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix", "direct", "reject", "fastly"]
       }
     },
     {
@@ -150,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["ai", "akamai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "direct", "reject", "fastly"]
+        "wantedList": ["apple", "ai", "akamai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix","direct", "reject", "fastly"]
       }
     },
     {
