--- a/config.json
+++ b/config.json
@@ -139,6 +139,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "speedtest",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/speedtest.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -150,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "ai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix", "direct", "reject", "youtube"]
+        "wantedList": ["apple", "ai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix", "direct", "reject", "youtube", "speedtest"]
       }
     },
     {
@@ -158,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "ai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix","direct", "reject", "youtube"]
+        "wantedList": ["apple", "ai", "cn", "lanip", "telegram", "google", "googlecn", "twitter", "facebook", "xiaomi", "bing", "developer", "netlix","direct", "reject", "youtube", "speedtest"]
       }
     },
     {
