--- a/config.json
+++ b/config.json
@@ -150,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["openai", "cn", "lan", "telegram", "tracker", "google", "googlecn", "xiaomi", "bing", "developer", "netlix", "ntp", "direct", "reject", "youtube", "speedtest"]
+        "wantedList": ["bing", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "openai", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
       }
     },
     {
@@ -158,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["openai", "cn", "lan", "telegram", "tracker", "google", "googlecn", "xiaomi", "bing", "developer", "netlix", "ntp", "direct", "reject", "youtube", "speedtest"]
+        "wantedList": ["bing", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "openai", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
       }
     },
     {
