--- a/config.json
+++ b/config.json
@@ -67,8 +67,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "openai",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/openai.txt"
+        "name": "fcm",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/fcm.txt"
       }
     },
     {
@@ -158,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "bing", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "openai", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
+        "wantedList": ["apple", "bing", "cn", "developer", "direct", "fcm", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
       }
     },
     {
@@ -166,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "bing", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "openai", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
+        "wantedList": ["apple", "bing", "cn", "developer", "direct", "fcm", "google", "googlecn", "httpdns", "lan", "netlix", "ntp", "reject", "speedtest", "telegram", "tracker", "xiaomi", "youtube"]
       }
     },
     {
