--- a/config.json
+++ b/config.json
@@ -60,15 +60,7 @@
       "action": "add",
       "args": {
         "name": "bing",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/bing.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
-        "name": "fcm",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/fcm.txt"
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/microsoft.txt"
       }
     },
     {
@@ -150,7 +142,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "bing", "cn", "developer", "direct", "fcm", "google", "googlecn", "httpdns", "lan", "netflix", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netflix", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
       }
     },
     {
@@ -158,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "bing", "cn", "developer", "direct", "fcm", "google", "googlecn", "httpdns", "lan", "netflix", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "netflix", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
       }
     },
     {
